--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@
   }
 
   .more-about {
-    background-color: var(--bg-color);
+    background-color: rgba(143,193,227, 0.5);
     padding: 1rem 6rem;
   }
   
@@ -125,6 +125,7 @@
   .more-about p {
     line-height: var(--line-height);
     padding: 0.4rem;
+    text-align: center;
   }
 
   .projects {
@@ -194,4 +195,68 @@
   .project-link {
     color: var(--tertiary-color);
     font-weight: bold;
+  }
+
+  .contact {
+    margin-top: 2rem;
+    background-color: rgba(143,193,227, 0.5);
+  }
+  
+  .contact h2 {
+    text-align: center;
+    margin-bottom: var(--bottom-margin-2);
+  }
+  
+  .contact-form-container {
+    max-width: 40.75rem;
+    margin: 0 auto;
+    padding: 0.938rem;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    background-color: var(--primary-color);
+  }
+
+  .contact-form-container label {
+    line-height: 2.7em;
+    font-weight: var(--bold-font);
+    color: var(--secondary-color);
+  }
+  
+  .contact-form-container textarea {
+    min-height: 6.25rem;
+    font-size: 14px;
+  }
+  
+  .contact-form-container .input-field {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    border: none;
+    border: 2px outset var(--secondary-color);
+    font-size: 0.875rem;
+    outline: none;
+  }
+
+  .input-field::placeholder {
+    padding: 0.5rem;
+    color: black;
+  }
+
+  .submit-btn {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #fff;
+    border: 2px solid var(--secondary-color);
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: var(--bold-font);
+  }
+
+  .submit-btn:hover {
+    background-color: var(--tertiary-color);
+    border: 2px solid var(--primary-color);
+    cursor: pointer;
+    color: var(--primary-color);
   }
