--- a/assets/style.css
+++ b/assets/style.css
@@ -149,7 +149,7 @@
 
   .projects-title {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: var(--bottom-margin);
     font-size: 28px;
     color: var(--tertiary-color);
 
@@ -186,7 +186,7 @@
   }
   
   .project-card {
-    background-color: #fff;
+    background-color: var(--primary-color);
     border-radius: 11px;
     box-shadow: 0 3px 10px var(--primary-shadow);
     padding: 20px;
@@ -249,7 +249,7 @@
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    background-color: #fff;
+    background-color: var(--primary-color);
     border: 2px solid var(--secondary-color);
     border-radius: 5px;
     font-size: 1rem;
@@ -280,7 +280,7 @@
     flex-wrap: wrap;
     margin-top: 3.0%;
     opacity: .8;
-    color: white;
+    color: var(--primary-color);
   }
 
   .footer-number{
@@ -288,11 +288,79 @@
   }
 
   .footer-number a {
-    color: white;
+    color: var(--primary-color);
     text-decoration: none;
   }
 
 
+  @media screen and (max-width: 720px) {
+    nav {
+      padding: 1.5rem 1rem;
+    }
+    .hero {
+      margin-top: -4rem;
+      flex-direction: column;
+      gap: 0;
+    }
+  
+    .hero img {
+          height: 37.5rem;
+          width: 30rem;
+      }
+  
+    .bio {
+      margin-top: -7rem;
+      width: 20.5rem;
+    }
 
+    .more-about {
+      margin-top: 2rem;
+      padding: 1rem 3.5rem;
+    }
+  
+    .more-about h2 {
+      text-align: center;
+    }
+  
+    .more-about p {
+      text-align: justify;
+    }
+
+    .icon {
+      width: 5.875rem;
+      height: 5.25rem;
+    }
+
+    .projects-container {
+      flex-direction: column;
+    }
+  
+    .project-container {
+      width: 20.875rem;
+    }
+
+    .contact-form-container {
+      max-width: 23.75rem;
+    }
+  }
+
+  @media screen and (max-width: 420px) {
+    .hero img {
+      height: 37.5rem;
+      width: 23rem;
+    }
+  
+    .bio {
+      width: 18.3rem;
+    }
+  
+    .project-container {
+      width: 17.875rem;
+    }
+  
+    .contact-form-container {
+      max-width: 17.75rem;
+    }
+  } 
 
   
