--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,10 @@
     box-sizing: border-box;
   }
 
+  .project-pic {
+    min-height: 200px;
+  }
+
   body {
     font-family: 'Lato', sans-serif;
   }
